fixed screnn shift problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,27 @@
+body{
+  overflow-y: scroll;
+}
+
+html, body, #root, .App{
+  height: 100%;
+}
+
+.white{
+  background-color: white;
+}
+
 .Home{
   background-color: rgb(235, 217, 233);
-  height: 10vh;
+  min-height: 10vh;
+}
+
+.mainContent{
+  min-height: 90vh;
 }
 
 .Home h1{
   margin: 0;
-  padding: 10px 0;
+  /* padding: 10px 0; */
   text-align: center;
 }
 
@@ -46,6 +62,12 @@ a:hover {
 a:active {
   color: black;
 }
+
+/* .App {
+  text-align: center;
+  
+} */
+
 /* .App {
   text-align: center;
 }
